# rpm-l10n

./: CMakeLists.txt  POTFILES.in  README  ar.po  br.po  ca.po  cmn.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gu.po  he.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  ko.po  kw.po  lo.po  ms.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  rpm.pot  ru.po  si.po  sk.po  sl.po  (+9 more)
